# aics-ml-segmentation

./: .pre-commit-config.yaml  pyproject.toml  setup.py
aicsmlsegment/: __init__.py  custom_loss.py  custom_metrics.py  model_utils.py  training_utils.py  utils.py
aicsmlsegment/DataLoader3D/: Universal_Loader.py
aicsmlsegment/Net3D/: unet_xy.py
