[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aicsmlsegment"
dynamic = ["version"]
description = "Scripts for ML structure segmentation"
readme = "README.md"
license = { text = "Allen Institute Software License" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-image>=0.21",
    "tifffile>=2023.7",
    "tqdm>=4.65",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "torch>=2.1",
    "torchvision>=0.16",
]

[project.scripts]
dl_train = "aicsmlsegment.bin.train:main"
dl_predict = "aicsmlsegment.bin.predict:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.version]
path = "aicsmlsegment/__init__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["D", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
length-sort = true

[tool.pytest.ini_options]
testpaths = ["aicsmlsegment/tests"]
